config and post fix

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy 2 # the main title
+title: Chirpy # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the subtitle
 
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
 url: "https://yyoo79.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: yyoo79 # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: yyoo79 # change to your Twitter username
 
 social:
   # Change to your full name.
@@ -39,7 +39,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://x.com/yyoo79 # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://github.com/yyoo79 # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://avatars.githubusercontent.com/u/1057403?v=4
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
